Remove game configuration UI for now